Fixed bot names overflow

--- a/src/app/bot-small/bot-small.component.less
+++ b/src/app/bot-small/bot-small.component.less
@@ -28,6 +28,10 @@ h2 {
 p {
   .text-sm();
   color: @text-secondary;
+}
+
+p,
+h2 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
